# serenelinux-update-wizard

./: .gitignore  CMakeLists.txt  build.sh  light-color.xml  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  serenelinux-update-wizard_ja_JP.ts  update_manager.cpp  update_manager.h  xfcemugshotkun.cpp
